--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <section name="navigation">
+  <nav>
     <div class="nav-bar">
       <div class="logo">
         <h1><span>Admin</span>WEBDEV</h1>
@@ -27,8 +27,8 @@
         </div>
       </div>
     </div>
-  </section>
-  <section name="menu">
+  </nav>
+  <section>
     <div class="menu">
         <div class="user-info">
           <img class="avatar" src="./img/user.jpg" alt="">
@@ -84,7 +84,7 @@
         </ul>
       </div>
   </section>
-  <section name="content">
+  <section>
     <div class="content">
       <div class="flex-box">
         <div class="card">
